// Vitest Snapshot v1

exports[`entryTypes > rendering { type: 'inset', name: 'name', entries: [Array] } matches snapshot 1`] = `
<div>
  <div
    class="inset"
  >
    <h4>
      name
    </h4>
    <p>
      <p>
        woo
      </p>
    </p>
  </div>
</div>
`;

exports[`entryTypes > rendering { type: 'inset', name: 'name', entries: [Array] } matches snapshot 2`] = `
<div>
  <div
    class="inset"
  >
    <h4>
      name
    </h4>
    <p>
      <p>
        a
      </p>
      <p>
        b
      </p>
      <p>
        c
      </p>
    </p>
  </div>
</div>
`;

exports[`entryTypes > rendering { type: 'list', items: [Array] } matches snapshot 1`] = `
<div>
  <ul
    class="list"
  >
    <li>
      <p>
        stuff
      </p>
    </li>
  </ul>
</div>
`;

exports[`entryTypes > rendering { type: 'list', items: [Array] } matches snapshot 2`] = `
<div>
  <ul
    class="list"
  >
    <li>
      <p>
        stuff
      </p>
    </li>
    <li>
      <div
        class="inset"
      >
        <h4>
          name
        </h4>
        <p>
          <p>
            inset!
          </p>
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array] } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "body of the quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array] } matches snapshot 2`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "two entries
      </p>
      <p>
        for this quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array] } matches snapshot 3`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "quote with an
      </p>
      <div
        class="inset"
      >
        <h4>
          name
        </h4>
        <p>
          <p>
            inset!
          </p>
        </p>
      </div>
      <p>
        "
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author' } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "body of the quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author' } matches snapshot 2`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "two entries
      </p>
      <p>
        for this quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author' } matches snapshot 3`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "quote with an
      </p>
      <div
        class="inset"
      >
        <h4>
          name
        </h4>
        <p>
          <p>
            inset!
          </p>
        </p>
      </div>
      <p>
        "
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author', from: 'source' } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "body of the quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      ,
       
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author', from: 'source' } matches snapshot 2`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "two entries
      </p>
      <p>
        for this quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      ,
       
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'author', from: 'source' } matches snapshot 3`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "quote with an
      </p>
      <div
        class="inset"
      >
        <h4>
          name
        </h4>
        <p>
          <p>
            inset!
          </p>
        </p>
      </div>
      <p>
        "
      </p>
    </blockquote>
    <figcaption>
      — 
      author
      ,
       
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], from: 'source' } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "body of the quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], from: 'source' } matches snapshot 2`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "two entries
      </p>
      <p>
        for this quote"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], from: 'source' } matches snapshot 3`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "quote with an
      </p>
      <div
        class="inset"
      >
        <h4>
          name
        </h4>
        <p>
          <p>
            inset!
          </p>
        </p>
      </div>
      <p>
        "
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite>
        source
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'section', name: 'name', entries: [Array] } matches snapshot 1`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    <p>
      entry
    </p>
  </p>
</div>
`;

exports[`entryTypes > rendering { type: 'section', name: 'name', entries: [Array] } matches snapshot 2`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    <p>
      entry
    </p>
    <div
      class="inset"
    >
      <h4>
        name
      </h4>
      <p>
        <p>
          inset!
        </p>
      </p>
    </div>
  </p>
</div>
`;
